@@ -7,6 +7,7 @@
 package dev.kalenchukov.wallet.in.service.impl;
 
 import dev.kalenchukov.wallet.entity.Operation;
+import dev.kalenchukov.wallet.exceptions.NotFoundOperationException;
 import dev.kalenchukov.wallet.in.service.OperationService;
 import dev.kalenchukov.wallet.repository.OperationRepository;
 import dev.kalenchukov.wallet.repository.impl.OperationRepositoryImpl;
@@ -15,7 +16,9 @@ import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
 import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
@@ -52,7 +55,8 @@ public class OperationServiceImplTest {
 		}
 
 		/**
-		 * Проверка метода {@link OperationServiceImpl#add(long, long, OperationType, BigDecimal)} с {@code null} в качестве типа операции.
+		 * Проверка метода {@link OperationServiceImpl#add(long, long, OperationType, BigDecimal)}
+		 * с {@code null} в качестве типа операции.
 		 */
 		@Test
 		public void addWithNullOperationType() {
@@ -68,7 +72,8 @@ public class OperationServiceImplTest {
 		}
 
 		/**
-		 * Проверка метода {@link OperationServiceImpl#add(long, long, OperationType, BigDecimal)} с {@code null} в качестве суммы.
+		 * Проверка метода {@link OperationServiceImpl#add(long, long, OperationType, BigDecimal)}
+		 * с {@code null} в качестве суммы.
 		 */
 		@Test
 		public void addWithNullAmount() {
@@ -81,6 +86,52 @@ public class OperationServiceImplTest {
 			assertThatExceptionOfType(NullPointerException.class).isThrownBy(() -> {
 				operationService.add(playerId, accountId, operationType, null);
 			});
+		}
+	}
+
+	/**
+	 * Класс проверки метода {@link OperationServiceImpl#findById(long, long, long)}}.
+	 */
+	@Nested
+	public class FindById {
+		/**
+		 * Проверка метода {@link OperationServiceImpl#findById(long, long, long)}.
+		 */
+		@Test
+		public void findById() throws NotFoundOperationException {
+			long operationId = 42L;
+			long accountId = 13L;
+			long playerId = 435L;
+			Operation operation = mock(Operation.class);
+//			when(operation.getAccountId()).thenReturn(accountId);
+			OperationRepository operationRepository = mock(OperationRepositoryImpl.class);
+			when(operationRepository.findById(playerId, accountId, operationId)).thenReturn(Optional.of(operation));
+			OperationService operationService = new OperationServiceImpl(operationRepository);
+
+			Operation actual = operationService.findById(playerId, accountId, operationId);
+
+			verify(operationRepository, only()).findById(playerId, accountId, operationId);
+			assertThat(actual).isEqualTo(operation);
+		}
+
+		/**
+		 * Проверка метода {@link OperationServiceImpl#findById(long, long, long)}
+		 * с отсутствующими операциями.
+		 */
+		@Test
+		public void findByIdWithNotFound() {
+			long operationId = 42L;
+			long accountId = 13L;
+			long playerId = 435L;
+			OperationRepository operationRepository = mock(OperationRepositoryImpl.class);
+			when(operationRepository.findById(playerId, accountId, operationId)).thenReturn(Optional.empty());
+			OperationService operationService = new OperationServiceImpl(operationRepository);
+
+			assertThatExceptionOfType(NotFoundOperationException.class).isThrownBy(() -> {
+				operationService.findById(playerId, accountId, operationId);
+			});
+
+			verify(operationRepository, only()).findById(playerId, accountId, operationId);
 		}
 	}
 
@@ -99,18 +150,19 @@ public class OperationServiceImplTest {
 			Operation operation = mock(Operation.class);
 			when(operation.getAccountId()).thenReturn(accountId);
 			OperationRepository operationRepository = mock(OperationRepositoryImpl.class);
-			when(operationRepository.find(accountId, playerId)).thenReturn(List.of(operation));
+			when(operationRepository.find(playerId, accountId)).thenReturn(List.of(operation));
 			OperationService operationService = new OperationServiceImpl(operationRepository);
 
-			List<Operation> actual = operationService.find(accountId, playerId);
+			List<Operation> actual = operationService.find(playerId, accountId);
 			List<Operation> expected = List.of(operation);
 
-			verify(operationRepository, only()).find(accountId, playerId);
+			verify(operationRepository, only()).find(playerId, accountId);
 			assertThat(actual).containsExactlyElementsOf(expected);
 		}
 
 		/**
-		 * Проверка метода {@link OperationServiceImpl#find(long, long)} с отсутствующими операциями.
+		 * Проверка метода {@link OperationServiceImpl#find(long, long)}
+		 * с отсутствующими операциями.
 		 */
 		@Test
 		public void findWithNotFound() {
@@ -119,12 +171,12 @@ public class OperationServiceImplTest {
 			Operation operation = mock(Operation.class);
 			when(operation.getAccountId()).thenReturn(accountId);
 			OperationRepository operationRepository = mock(OperationRepositoryImpl.class);
-			when(operationRepository.find(accountId, playerId)).thenReturn(List.of());
+			when(operationRepository.find(playerId, accountId)).thenReturn(Collections.emptyList());
 			OperationService operationService = new OperationServiceImpl(operationRepository);
 
-			List<Operation> actual = operationService.find(accountId, playerId);
+			List<Operation> actual = operationService.find(playerId, accountId);
 
-			verify(operationRepository, only()).find(accountId, playerId);
+			verify(operationRepository, only()).find(playerId, accountId);
 			assertThat(actual).isEmpty();
 		}
 	}
